Aggiunto un "minimo" di stile

--- a/index.html
+++ b/index.html
@@ -16,18 +16,20 @@
     <!-- /css -->
     <title>ToDoList</title>
   </head>
-  <body>
+  <body class="flex_display">
 
     <div class="wrapper">
       <h1>ToDoList</h1>
-      <ul class="to_do_list">
-        <li> prova  <i class="to_do_list-delate fas fa-trash-alt"></i> </li>
-      </ul>
-      <input id="aggiungi" type="text" placeholder="Aggiungi">
+      <div class="container flex_display">
+        <ul class="to_do_list">
+
+        </ul>
+        <input id="aggiungi" type="text" placeholder="Aggiungi">
+      </div>
     </div>
 
     <div class="template">
-      <li>  <i class="to_do_list-delate fas fa-trash-alt"></i> </li>
+      <li class="flex_display">  <i class="to_do_list-delate fas fa-trash-alt"></i> </li>
     </div>
 
 
